Added clear button

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
         <textarea id="text-input" class="text-area"></textarea>
         <button id="send-button" class="send-button">Send</button>
       </div>
+      <div class="clear-messages">
+        <button class="clear-button" id="clear-button">Clear Messages</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
