--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="messages-div">
+      <div class="messages-div" id="messages-div">
         <ul class="messages" id="messages"></ul>
       </div>
 
